welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:29: error: ')' expected but ';' found.
  setCouleurBrosse(T((-1+d.toInt)%w);
                                    ^